[project]
name = "gemi2api-server"
version = "0.1.3"
license = "MIT"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-cookie3>=0.20.1",
    "fastapi>=0.115.12",
    "gemini-webapi>=2.0.0",
    "uvicorn[standard]>=0.34.1",
    "httpx>=0.27.0",
    "h2>=4.1.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
]

# 默认使用清华源，如果无法安装请取消pypi源的注释
#[[tool.uv.index]]
#name = "pypi"
#url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 150  # 设置最大行长度

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # 启用的规则（E: pycodestyle, F: pyflakes, W: pycodestyle warnings, I: isort）
ignore = ["E501", "W191"]  # 忽略特定规则（行长度警告和tab缩进警告）

[tool.ruff.format]
quote-style = "double"  # 使用双引号
indent-style = "tab"  # 使用tab缩进
